Thu May 29 15:38:30 2003  Kristian Rietveld  <kris@gtk.org>

	Fixes #75745, reported by Richard Hult. Merged from stable.

	* gtk/gtktreeview.c (gtk_tree_view_bin_expose): set/unset
	GTK_CELL_RENDERER_FOCUSED flag whether the current node is the
	cursor or not.

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_cell_process_action):
	if we are rendering a cursor row, and the cell the be
	processed has focus, then set the GTK_CELL_RENDERER_FOCUSED
	flag (else we unset it).

2003-05-27  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkwindow-decorate.c: 
	* gtk/gtktreeprivate.h: 
	* gtk/gtkdnd.c: 
	* gdk/win32/gdkwindow-win32.h: 
	* gdk/linux-fb/gdkprivate-fb.h: 
	* gdk/linux-fb/gdkkeyboard-fb.c: Remove dubious bitfields of
	unspecified signedness.  (#112919, Morten Welinder)

	* gtk/queryimmodules.c (escape_string): 
	* gtk/gtktextbtree.c (_gtk_text_btree_get_text): 
	* gtk/gtksettings.c (_gtk_settings_parse_convert): 
	* gtk/gtkrc.c (gtk_rc_parse_assignment): 
	* gtk/gtkinputdialog.c (gtk_input_dialog_set_key): 
	* gdk/x11/gdkdisplay-x11.c (escape_for_xmessage): Replace all 
	occurances of g_string_new ("") by g_string_new (NULL). (#106975,
	Morten Welinder) 

2003-05-27  Tor Lillqvist  <tml@iki.fi>

	* gtk-zip.sh.in: Only include the Default and Emacs themes' gtkrc
	files. Include share/gtk-doc/{gdk-pixbuf,gdk,gtk}.

	* gdk/Makefile.am: libgdk-win32-2.0.la depends on
	win32/libgdk-win32.la.

	* gtk/gtk.def: Add gtk_tree_view_column_cell_get_position.

Sat May 24 22:19:13 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkscrollbar.c (gtk_scrollbar_class_init): Make the minimum
	scrollbar slider length 21 instead of 7.

2003-05-23  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtknotebook.c: Add support for up to four scroll
	arrows. Control their display by new style properties
	"has_forward_stepper", "has_backward_stepper",
	"has_secondary_forward_stepper" and
	has_secondary_backward_stepper". (#110540)

	* gtk/gtknotebook.h (struct _GtkNotebook): Make in_child and